# solana-simple-token

./: Cargo.toml  README.md
src/: lib.rs
tests/: lib.rs
